--- a/src/App.css
+++ b/src/App.css
@@ -10,3 +10,15 @@
   padding: 24px;
   background: #fff;
 }
+
+.textInputDiv {
+  padding-top: 20px;
+  max-height: 100%;
+  overflow-y: scroll;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+.textInputDiv::-webkit-scrollbar {
+  width: 0;
+  height: 0;
+}
