--- a/src/App.css
+++ b/src/App.css
@@ -11,14 +11,14 @@
   background: #fff;
 }
 
-.textInputDiv {
-  padding-top: 20px;
+.textInputContainer {
+  padding: 20px 10px;
   max-height: 100%;
   overflow-y: scroll;
   scrollbar-width: none;
   -ms-overflow-style: none;
 }
-.textInputDiv::-webkit-scrollbar {
+.textInputContainer::-webkit-scrollbar {
   width: 0;
   height: 0;
 }
